specs/001-typescript-to-zig-native/examples/valid/postfix-decrement.ts
let total = 0;

for (let i = 3; i > 0; i--) {
  total += i;
}

console.log(total);
