specs/001-typescript-to-zig-native/examples/invalid/void-value.ts
function ready(): void {
  console.log("ready");
}

let result = ready();
